ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gameverse-ingress
  namespace: gameverse
spec:
  rules:
    - host: gameverse.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 5000
